examples/test/testpolicy8850.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8850
  namespace: namespace107
spec:
  podSelector:
    matchLabels:
      key16: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value19
          key24: value6
          key17: value40
      podSelector:
        matchLabels:
          key34: value49
          key7: value34
          key20: value12
